2008-01-05  Jonathan Pryor  <jpryor@novell.com>

	* map.h, map.c: Flush; add new ST_NOEXEC, ST_REMOUNT, and ST_BIND MountFlags 
	  enumeration values.

2007-12-17  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush; add Mono_Posix_Syscall__Utsname, Mono_Posix_Syscall_uname()
	  declarations.
	* Makefile.am: Add sys-utsname.c to the build.
	* sys-utsname.c: Added; binding for uname(2).
	* mph.h: Change definition of _mph_copy_structure_strings() so that the
	  offset array specifies whether the string is a pointer (char*) or inline
	  array (char[]) within the structure.  Necessary because most bound
	  structure string members are pointers, but `struct utsname' uses arrays.
	* fstab.c, pwd.c: Update offset array generation due to above.
	* x-struct-str.c: Update _mph_copy_structure_strings() as above.

2007-11-01  Geoff Norton  <gnorton@novell.com>

	* stdio.c:  Handle Leopards lack of L_cuserid.

2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Provide errno as a parameter and set errno before calling
	  perror(3), as errno is cleared during P/Invoke.
	* map.h: Updated prototype for Mono_Posix_Stdlib_perror().

2007-09-08  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c: NAME_MAX isn't defined on Solaris; fix the build.

2007-09-04  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c: Fix `struct dirent' overflow on Solaris.  See #82678.

2007-09-03  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c: Fix logic to determine if readdir_r() succeeded.  
	  Thanks to Albert Lee for the patch; see #82678.

2007-08-14  Wade Berrier  <wberrier@novell.com>

	* serial.c: include sys/time.h for mac osx 10.3 for timeval

2007-08-12  Lukasz Byczynski <lukaszb@forcom.com.pl>

	* serial.c:
	
	- all changes are based on Windows .Net SerialPort behavior and
	this
	document: http://www.easysw.com/~mike/serial/serial.html
	- removed wrong default values from open_serial
	- added timeout detection in write_serial
	- added proper parameters setting in set_attributes
